--- a/index.html
+++ b/index.html
@@ -1,11 +1,86 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>
-a
-</title>
+<link rel=“stylesheet” type=“text/css” href=“index.css” />
 </head>
 <body>
-body
+    <div class="container">
+    <h1>Stawrt</h1>
+    
+    <div class="right">
+        <h2>Martabak</h2>
+        <p>Gosong</p>
+    </div>
+    <div class='spacer'>
+        <a href="javascript://" class='wide blue'>
+            <i class="icon-home"></i>
+            <h2>Show Desktop</h2>
+        </a>
+        <a href="javascript://" class='wide orange'>
+            <i class="icon-cog"></i>
+            <h2>Settings</h2>
+        </a>
+        <a href="javascript://" class='box redgay'>
+            <i class="icon-camera"></i>
+            <h2>Camera</h2>
+        </a>
+        <a href="javascript://" class='box lime'>
+            <i class="icon-heart"></i>
+            <h2>Favorite</h2>
+        </a>
+        <a href="javascript://" class='box bluefish'>
+            <i class="icon-twitter"></i>
+            <h2>Twitter</h2>
+        </a>
+        <a href="javascript://" class='box yellow'>
+            <i class="icon-map-marker"></i>
+            <h2>Places</h2>
+        </a>
+        <a href="javascript://" class='wide magenta gallery'>
+            <h2>Gallery</h2>
+        </a>
+        <a href="javascript://" class='box redgay'>
+            <i class="icon-globe"></i>
+            <h2>Browser</h2>
+        </a>
+        <a href="javascript://" class='box orange'>
+            <i class="icon-envelope-alt"></i>
+            <h2>E-mail</h2>
+        </a>
+        <a href="javascript://" class='wide blue cal_e'>
+            <h1>25</h1><p>Monday</p>
+            <h2 class="top cal_i">S</h2>
+            <i class="icon-calendar">d</i>
+        </a>
+        <a href="javascript://" class='box lime'>
+            <i class="icon-cloud"></i>
+            <h2>SkyDrive</h2>
+        </a>
+    </div>
 
+    <div class='spacer spacer3x'>
+        <a href="javascript://" class='box blue'>
+            <i class="icon-facebook"></i>
+            <h2>Facebook</h2>
+        </a>
+        <a href="javascript://" class='box bluefish'>
+            <i class="icon-facetime-video"></i>
+            <h2>FaceTime</h2>
+        </a>
+        <a href="javascript://" class='box redgay'>
+            <i class="icon-tasks"></i>
+            <h2>Task</h2>
+        </a>
+        <a href="javascript://" class='box magenta'>
+            <i class="icon-list-alt"></i>
+            <h2>Windows Explorer</h2>
+        </a>
+        <a href="javascript://" class='wide yellow'>
+            <i class="icon-play"></i>
+            <h2>Media</h2>
+        </a>
+    </div>
+
+</div>
 </body>
 </html>
