--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
     </head>
     <body>
         <div id="main">
-            Hi! This is Mrityunjai Singh.
+            <div class = "topic">Introduction</div>
+            <p id = "intro">Hi! This is Mrityunjai Singh.
+                <br/>
+                <img src="my_photo.jpeg" id = "my_photo"/>
+            </p>
+            <div class="topic">Links</div>
+            <p id = "intro"> <a href="https://www.facebook.com/people/Mrityunjai-Singh/100034391482761">Facebook</a></p>
+
         </div>
     </body>
 </html>
