--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="new.css"/>
         <nav id = "uppermost-navbar">
             <div>
+            <div class ="upper-nav-item">
+                <a href = "#" class = "active">Home</a>
+            </div>
             <div class = "upper-nav-item">
                 <a href="#about">About</a>
             </div>
@@ -27,8 +30,14 @@
                 <img src="my_photo.jpeg" id = "my_photo"/>
             </p>
             <div class="topic">Links</div>
-            <p id = "intro"> <a href="https://www.facebook.com/people/Mrityunjai-Singh/100034391482761">Facebook</a></p>
-
+            <div class ="foot">
+            <ul>
+                <li><a href="https://www.facebook.com/people/Mrityunjai-Singh/100034391482761">Facebook</a></li>
+                <li><a href="https://github.com/mrityunjai01">Github</a></li>
+                <li><a href="https://www.instagram.com/mrityunjai99/">Instagram</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+            </div>
         </div>
     </body>
 </html>
