changed a few colours

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        Email me at mt1190705@iitd.ac.in
+        Email me at <a href="mailto:mt1190705@iitd.ac.in">mt1190705@iitd.ac.in</a>
     </body>
 </html>
