--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <title>
             Welcome to My Website
         </title>
+        
+         <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--Import materialize.css-->
+        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+        <!--Let browser know website is optimized for mobile-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="new.css"/>
         <nav id = "uppermost-navbar">
             <div>
@@ -39,5 +47,8 @@
             </ul>
             </div>
         </div>
+        <!--JavaScript at end of body for optimized loading-->
+      <script type="text/javascript" src="js/materialize.min.js"></script>
+
     </body>
 </html>
