Added header.php and mailit.php

--- a/index.html
+++ b/index.html
@@ -13,22 +13,7 @@
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="new.css"/>
-        <nav id = "uppermost-navbar">
-            <div>
-            <div class ="upper-nav-item">
-                <a href = "#" class = "active">Home</a>
-            </div>
-            <div class = "upper-nav-item">
-                <a href="#about">About</a>
-            </div>
-            <div class="upper-nav-item">
-                <a href="./Projects">Projects</a>
-            </div>
-            <div class="upper-nav-item">
-                <a href="./Contact/index.html">Contact</a>
-            </div>
-        </div>
-        </nav>
+        <?php include 'header.php';?>
     </head>
     <body>
         <div id="main">
