--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="new.css"/>
-        <?php include 'header.php';?>
+        <?php include './header.php';?>
     </head>
     <body>
         <div id="main">
