--- a/header.html
+++ b/header.html
@@ -1,5 +1,4 @@
-<?php
-echo '<nav id = "uppermost-navbar">
+<nav id = "uppermost-navbar">
 <div>
 <div class ="upper-nav-item">
     <a href = "#" class = "active">Home</a>
@@ -14,5 +13,4 @@ echo '<nav id = "uppermost-navbar">
     <a href="./Contact/index.html">Contact</a>
 </div>
 </div>
-</nav>';
-?>
+</nav>
