--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             $(function(){
               var includes = $('[data-include]');
               jQuery.each(includes, function(){
-                var file = './' + $(this).data('include') + '.html';
+                var file = '' + $(this).data('include') + '.html';
                 $(this).load(file);
               });
             });
