jQuery didn't work so used simple js to add header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="new.css" />
-    <div id="header"> </div>
+    <div id="header"> 
+        <script src ="header.js"></script>
+    </div>
 </head>
 
 <body>
