added header and footer across all pages

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -4,8 +4,16 @@
         <title>
             Contact
         </title>
+        <link type="text/css" rel="stylesheet" href="../new.css" media="screen,projection" />
+        <div id="header"> 
+            <script src ="../header.js"></script>
+        </div>
+
     </head>
     <body>
         Email me at mt1190705@iitd.ac.in
+        <div id="footer"> 
+            <script src ="../footer.js"></script>
+        </div>
     </body>
 </html>
