--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <nav id = "uppermost-navbar">
 <div>
 <div class ="upper-nav-item">
-    <a href = "#" class = "active">Home</a>
+    <a href = "index.html" class = "active">Home</a>
 </div>
 <div class = "upper-nav-item">
     <a href="#about">About</a>
