--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
             <img src="my_photo.jpeg" id="my_photo" />
         </p>
         <div class="topic">Links</div>
-        <div class="foot">
+        <div id="loremipsum">
             <ul>
-                <li><a href="https://www.facebook.com/people/Mrityunjai-Singh/100034391482761">Facebook</a></li>
-                <li><a href="https://github.com/mrityunjai01">Github</a></li>
-                <li><a href="https://www.instagram.com/mrityunjai99/">Instagram</a></li>
-                <li><a href="#about">About</a></li>
+                <a href="Test/loremipsum.html"> Lorem Ipsum </a>
             </ul>
         </div>
+
+        
+    </div>
+    <div id="footer"> 
+        <script src ="footer.js"></script>
     </div>
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
