updated broken navigation links

--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <nav id = "uppermost-navbar">
 <div>
 <div class ="upper-nav-item">
-    <a href = "index.html" class = "active">Home</a>
+    <a href = "https://mrityunjai01.github.io" class = "active">Home</a>
 </div>
 <div class = "upper-nav-item">
     <a href="#about">About</a>
@@ -10,7 +10,7 @@
     <a href="./Projects">Projects</a>
 </div>
 <div class="upper-nav-item">
-    <a href="./Contact/index.html">Contact</a>
+    <a href="https://mrityunjai01.github.io/Contact/index.html">Contact</a>
 </div>
 </div>
 </nav>
