corrected broken links

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -11,7 +11,7 @@
 
     </head>
     <body>
-        Email me at mt1190705@iitd.ac.in
+        Email me at mt1190705@iitd.ac.in. thank you for sparing time for this.
         <div id="footer"> 
             <script src ="../footer.js"></script>
         </div>
