Add an about page and a projects page

--- a/header.html
+++ b/header.html
@@ -4,10 +4,10 @@
     <a href = "https://mrityunjai01.github.io">Home</a>
 </div>
 <div class = "upper-nav-item">
-    <a href="#about">About</a>
+    <a href="https://mrityunjai01.github.io/About/index.html">About</a>
 </div>
 <div class="upper-nav-item">
-    <a href="./Projects">Projects</a>
+    <a href="https://mrityunjai01.github.io/Projects/index.html">Projects</a>
 </div>
 <div class="upper-nav-item">
     <a href="https://mrityunjai01.github.io/Contact/index.html">Contact</a>
