fixed an empty link in footer

--- a/footer.html
+++ b/footer.html
@@ -4,6 +4,6 @@
         </li>
         <li><a class="bottombar" href="https://github.com/mrityunjai01">Github</a></li>
         <li><a class="bottombar" href="https://www.instagram.com/mrityunjai99/">Instagram</a></li>
-        <li><a class="bottombar" href="#about">About</a></li>
+        <li> <a class="bottombar" href="https://mrityunjai01.github.io/About/index.html">About</a> </li>
     </ul>
 </div>
